k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: global-market-platform
  labels:
    name: global-market-platform
    app: global-market-platform
